--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ListActivity"></activity>
+        <activity android:name=".SessionListActivity" />
+        <activity android:name=".ExerciseListActivity" />
+        <activity android:name=".NewExerciseActivity"></activity>
     </application>
 
 </manifest>
