--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kryword.fitmate">
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,7 +18,9 @@
         </activity>
         <activity android:name=".SessionListActivity" />
         <activity android:name=".ExerciseListActivity" />
-        <activity android:name=".NewExerciseActivity"></activity>
+        <activity android:name=".NewExerciseActivity" />
+        <activity android:name=".NewSessionActivity" />
+        <activity android:name=".SessionExerciseActivity"></activity>
     </application>
 
 </manifest>
